add link to recording

--- a/index.qmd
+++ b/index.qmd
@@ -5,4 +5,4 @@ format:
     toc: false
 ---
 
-This repository contains examples and documentation for accessing and applying existing research computing resources available to NOAA Fisheries staff. Example code and documentation were presented as a part of the National Stock Assessment Seminar series ([slides](https://moshima-pifsc.github.io/NSASS-HTC-HPC-Computing/assets/web-slides.html)).
+This repository contains examples and documentation for accessing and applying existing research computing resources available to NOAA Fisheries staff. Example code and documentation were presented as a part of the National Stock Assessment Seminar series ([slides](https://moshima-pifsc.github.io/NSASS-HTC-HPC-Computing/assets/web-slides.html)). A recording of the seminar can be found on the NOAA Library YouTube channel ([here](https://youtu.be/j1Grx1maXfE)).
