--- a/assets/web-slides.qmd
+++ b/assets/web-slides.qmd
@@ -6,3 +6,4 @@ Seminar slides from the NOAA National Stock Assessment Science Seminar Series pr
 
 {{< revealjs file="presentation.html" height="500px" class="ratio ratio-16x9" >}}
 
+A recording of the seminar can be found on the NOAA Library YouTube channel ([here](https://youtu.be/j1Grx1maXfE)).
